- fixed bug in SCIPfreeProb() in scip.c: all pricers are deactivated now
- fixed bug in reader_mps.c with respect to corrupted files
- fixed bug in SCIPsolveKnapsack() in cons_knapsack.c due to problems with coefficients gretaer than INT_MAX 

plugins:
- added interface to QSopt due to Daniel Espinoza
- added reader for FlatZinc models (reader_fzn.{c,h})
- added multi-commodity-flow cut separator
- adjusted interface to ZIMPL (reader_zpl.{c,h} for ZIMPL version 2.10; this interface should also work with older ZIMPL versions
- added writer for GAMS models (reader_gms.{c,h})
- added constraint handler for quadratic constraints
- added first version of an interface to NLP solvers (type_nlpi.h, struct_nlpi.h, nlpi.h, nlpi.c, nlpi_oracle.h, nlpi_oracle.c)
- added first version of an interface to Ipopt (only QCP, no deletion of vars/cons allowed; nlpi_ipopt.(h|c))
- added heuristic that performs a local search in an NLP (takes only linear and quadratic constraints into account so far)

parameters:
- removed parameter <constraints/and/initiallp> since it is not needed anymore;
- new parameter <constraints/and/enforcecuts> in cons_and.c, should cuts be separated during LP enforcing?
- new parameter <constraints/and/presolusehashing> in cons_and.c, should pairwise presolving use hashing?, default TRUE
- new parameter <constraints/and/aggrlinearization> in cons_and.c, should an aggregated version of the linearization of the 
- set parameter <constraints/and/sepafreq> default value to 1
- new parameter <constraints/countsols/sollimit> in cons_countsols.c, counting stops, if the given number of solutions were found (-1: no limit)  
- new parameter <constraints/xor/presolusehashing> in cons_xor.c, should pairwise presolving use hashing?, default TRUE
- new parameter <branching/relpscost/advanced/conflenscore>, default value 0.001


SCIP version 1.1.0
===============

compiling:
- added in all make/make.* "GMP_FLAGS" and "GMP_LDFLAGS"